First jQuery update

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 <body>
   <div class="well col-sm-6 col-sm-offset-3 col-xs-12">
     <h1>Listly</h1>
+    <ol id="tasks" class="list-group">
+      <li class="list-group-item">Task 1</li>
+    </ol>
+    <form role="form" id ="new_task" class="form-inline">
+      <label>
+        <input type="text" name="task_name" class="form-control">
+        <input type="submit" value="Add Task" class="btn btn-sm btn-primary">
+      </label>
+    </form>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
