--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+  <!-- Our custom scripts -->
+  <script src="js/task.js"></script>
   <script src="js/listly.js"></script>
+
 </body>
 </html>
