Updated task record in local storage upon submitting the edit task form.

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     </form>
 
     <form id="edit_form_template" class="form-inline hidden">
-      <input type="text" class="form-control edit-task-name">
+      <input type="text" class="form-control edit-task-name" name="task_name">
       <input type="submit" value="Save" class="btn btn-sm btn-success">
-      <button class="btn btn-sm btn-default">Cancel</button>
+      <button type="button" class="btn btn-sm btn-default">Cancel</button>
     </form>
 
   </div>
